// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UICard /> Disabled card should render properly 1`] = `
<div
  className="undefined"
  onClick={[Function]}
>
  <div>
    
  </div>
</div>
`;

exports[`<UICard /> Empty card should render properly 1`] = `
<div
  className=""
  onClick={[Function]}
>
  <div>
    
  </div>
</div>
`;

exports[`<UICard /> Empty cards should render properly 1`] = `
<div
  className=""
  onClick={[Function]}
>
  <div>
    
  </div>
</div>
`;

exports[`<UICard /> Selected cards should render properly 1`] = `
<div
  className=""
  onClick={[Function]}
>
  <div>
    
  </div>
</div>
`;

exports[`<UICard /> Selected cards should render properly 2`] = `
<div
  className=""
  onClick={[Function]}
>
  <div>
    
  </div>
</div>
`;

exports[`<UICard /> Selected cards should render properly 3`] = `
<div
  className=""
  onClick={[Function]}
>
  <div>
    
  </div>
</div>
`;

exports[`<UICard /> Selected cards should render properly 4`] = `
<div
  className=""
  onClick={[Function]}
>
  <div>
    
  </div>
</div>
`;

exports[`<UICard /> cards should render properly 1`] = `
<div
  className=""
  onClick={[Function]}
>
  <div>
    
  </div>
</div>
`;

exports[`<UICard /> cards should render properly 2`] = `
<div
  className=""
  onClick={[Function]}
>
  <div>
    
  </div>
</div>
`;

exports[`<UICard /> cards should render properly 3`] = `
<div
  className=""
  onClick={[Function]}
>
  <div>
    
  </div>
</div>
`;

exports[`<UICard /> cards should render properly 4`] = `
<div
  className=""
  onClick={[Function]}
>
  <div>
    
  </div>
</div>
`;
